fix visibility of popup when userclick on add to back in mobile

--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -1959,25 +1959,43 @@
 
 
 // ---------------------shop the look popup----------------------------------
-.shop-the-look {
-  background-color: $white;
-  padding-bottom: 2px;
-  .title-wrapper {
-    text-align: right;
-    padding: 20px;
-    position: relative;
-    .shop-title {
-      @include h3_20px_lora_charcoal
+.shop-modal-container{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top:0;
+  left:0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1000010;
+  .shop-the-look {
+    background-color: $white;
+    padding-bottom: 2px;
+    transition: opacity 0.3s ease-in, transform 0.3s ease-in;
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      top: unset;
+      left: unset;
+      transform: unset;
+      bottom: 0;
+      position: fixed;
     }
-    .close-icon{
-      position: absolute;
-      right: 24px;
-      top: 26px;
-      width: 13px;
-      height: 13px;
+    .title-wrapper {
+      text-align: right;
+      padding: 20px;
+      position: relative;
+      .shop-title {
+        @include h3_20px_lora_charcoal
+      }
+      .close-icon{
+        position: absolute;
+        right: 24px;
+        top: 26px;
+        width: 13px;
+        height: 13px;
+      }
     }
-  }
-  .shop-land-scape{
-    padding: 0 15px 15px 15px;
+    .shop-land-scape{
+      padding: 0 15px 15px 15px;
+    }
   }
 }
